--- a/ei_sp500.ipynb
+++ b/ei_sp500.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -38,13 +38,13 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "csvpath = Path('AAPL.csv')\n",
+    "csvpath = Path('stock_data/AAPL.csv')\n",
     "df = pd.read_csv(csvpath, parse_dates=True, index_col='Date')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -171,7 +171,7 @@
        "2016-04-20  0.205773      -0.530331  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
